Aggiornati javadoc, risolti molti warning sonarlint